--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Area calculation",
   "short_name": "Area calculation",
   "lang": "uk-UA",
-  "start_url": "/",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#313131",
  "theme_color": "#61A2AE",
@@ -42,16 +42,16 @@
    "sizes": "192x192",
    "type": "image\/png",
    "density": "4.0"
-  }
-      {
+  },
+  {
       "src": "\/icons\/android-icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
-    },
-    {
+  },
+  {
       "src": "\/icons\/android-icon-192x192.png",
       "type": "image/png",
       "sizes": "512x512"
-    }
+  }
  ]
 }
