--- a/manifest.json
+++ b/manifest.json
@@ -48,6 +48,12 @@
       "type": "image/png",
       "sizes": "192x192"
   },
+    {
+      "src": "\/icons\/android-icon-192x192.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "any maskable"
+  },
   {
       "src": "\/icons\/android-icon-192x192.png",
       "type": "image/png",
